// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton renders 1`] = `
.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  cursor: pointer;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  font-size: 16px;
  cursor: pointer;
  padding-bottom: 16px;
}

.c5 {
  position: relative;
  margin: 0;
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c6 {
  position: relative;
  margin: 0;
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  border: 2px solid #adb5bd;
  background-color: 'transparent';
  position: absolute;
  top: 0;
}

<div
  class="c0"
  font-size="1"
>
  <label
    class="c1"
    font-size="1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <input
          class="c4"
          type="radio"
        />
        <div
          class="c5"
          font-size="1"
        >
          <div
            class="c6"
            font-size="1"
          />
        </div>
      </div>
      <div
        class="c3"
      >
        <div />
      </div>
    </div>
  </label>
</div>
`;

exports[`RadioButton renders with prop checked 1`] = `
.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  cursor: pointer;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  font-size: 16px;
  cursor: pointer;
  padding-bottom: 16px;
}

.c5 {
  position: relative;
  margin: 0;
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c6 {
  position: relative;
  margin: 0;
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  border: 2px solid #0588cb;
  background-color: 'transparent';
  position: absolute;
  top: 0;
}

.c7 {
  position: relative;
  margin: 0;
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  border: 2px solid #0588cb;
  background-color: 'transparent';
  position: absolute;
  top: 0;
  background-color: #0588cb;
  -webkit-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

<div
  class="c0"
  font-size="1"
>
  <label
    class="c1"
    font-size="1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <input
          class="c4"
          type="radio"
        />
        <div
          class="c5"
          font-size="1"
        >
          <div
            class="c6"
            font-size="1"
          />
          <div
            class="c7"
            font-size="1"
          />
        </div>
      </div>
      <div
        class="c3"
      >
        <div />
      </div>
    </div>
  </label>
</div>
`;

exports[`RadioGroup renders 1`] = `
.c3 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  cursor: pointer;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  padding: 0;
  position: absolute;
  width: 0;
}

.c0 {
  font-size: 16px;
  cursor: pointer;
  padding-bottom: 16px;
}

.c5 {
  position: relative;
  margin: 0;
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;
  border-radius: 50%;
  height: 16px;
  width: 16px;
}

.c6 {
  position: relative;
  margin: 0;
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  border: 2px solid #0588cb;
  background-color: 'transparent';
  position: absolute;
  top: 0;
}

.c7 {
  position: relative;
  margin: 0;
  margin-right: 10px;
  vertical-align: middle;
  cursor: pointer;
  display: inline-block;
  border-radius: 50%;
  height: 16px;
  width: 16px;
  border: 2px solid #0588cb;
  background-color: 'transparent';
  position: absolute;
  top: 0;
  background-color: #0588cb;
  -webkit-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

<div>
  <div
    class="c0"
    font-size="1"
  >
    <label
      class="c1"
      font-size="1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <input
            class="c4"
            type="radio"
          />
          <div
            class="c5"
            font-size="1"
          >
            <div
              class="c6"
              font-size="1"
            />
            <div
              class="c7"
              font-size="1"
            />
          </div>
        </div>
        <div
          class="c3"
        >
          <div />
        </div>
      </div>
    </label>
  </div>
</div>
`;
